@@ -18,7 +18,7 @@
         <commons-collections.version>4.4</commons-collections.version>
         <commons-lang.version>3.11</commons-lang.version>
         <commons-math.version>3.6.1</commons-math.version>
-        <java.version>19</java.version>
+        <java.version>20</java.version>
         <jgrapht.version>1.5.0</jgrapht.version>
         <junit.version>5.7.0</junit.version>
         <slf4j.version>1.7.30</slf4j.version>
@@ -78,7 +78,6 @@
                 <version>3.8.0</version>
                 <configuration>
                     <release>${java.version}</release>
-                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
